Blades in the Dark v2.4: Fix missing space in roll template

--- a/Blades in the Dark/Source/rolltemplate.css
+++ b/Blades in the Dark/Source/rolltemplate.css
@@ -83,6 +83,9 @@
 .sheet-rolltemplate-bitd .sheet-roll-holder.sheet-roll-fortune.sheet-roll-short .sheet-roll-header {
 	margin-bottom: -51px;
 }
+.sheet-rolltemplate-bitd .sheet-roll-space::after {
+	content: " ";
+}
 /* Title */
 .sheet-rolltemplate-bitd .sheet-roll-title {
 	color: #fff;
